discussion/kv_engine/170266/170266_rev23_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: FollyExecutorPool cancel tasks in cpuPool queue

Add a mechanism to remove work for a given taskable from the
cpuPool queue.

This is implemented by interposing our own queue of work underneath
the queue in the cpuPool to allow us to remove tasks from the queue
when we unregister a taskable. Now, when we schedule a task we
enqueue it in a queue in a custom executor and schedule a task on the
base executor to pop a task from the queue and run it. To remove tasks
when we unregister a taskable we pop all elements of our queue and
re-push only those of the other taskables and manually cancel each
task for the taskable going away.

Change-Id: Idcbf1737b80c3d3b92ed62adb3d4d164a2cf4266

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-10 20:08:42.000000000
Message: 
Uploaded patch set 23.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-10 20:56:18.000000000
Message: 
Patch Set 23: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17239/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17547/ : ABORTED

Failure of an engine_testapp test:

<pre>
Running [0012/0018]: Stat latency with 100 active vbuckets...Latency [Stats with 100 vbuckets] - 10 items (�s)======================================
[2022-02-10T20:47:12.228Z] 
[2022-02-10T20:47:12.228Z]                                 Percentile           
[2022-02-10T20:47:12.228Z]                          Median     95th     99th  Std Dev  Histogram of samples
[2022-02-10T20:47:12.228Z] 
[2022-02-10T20:47:12.228Z] timings                 174.080  205.938  205.938   12.686  ????????????????????????????????
[2022-02-10T20:47:12.228Z] workload                 59.589   94.555   94.555   16.327  ????????????????????????????????
[2022-02-10T20:47:12.228Z] dcpagg                   68.581  102.821  102.821   16.623  ????????????????????????????????
[2022-02-10T20:47:12.228Z] memory                  109.148  241.863  241.863   42.017  ????????????????????????????????
[2022-02-10T20:47:12.228Z] diskinfo                  6.875   10.683   10.683    1.524  ????????????????????????????????
[2022-02-10T20:47:12.228Z] vbucket                  11.060   16.163   16.163    4.001  ????????????????????????????????
[2022-02-10T20:47:12.228Z] vkey_vb0                 96.087  176.975  176.975   30.098  ????????????????????????????????
[2022-02-10T20:47:12.228Z] vb-details_vb0           42.709   94.210   94.210   18.300  ????????????????????????????????
[2022-02-10T20:47:12.228Z] prev-vbucket             11.896   16.593   16.593    4.337  ????????????????????????????????
[2022-02-10T20:47:12.228Z] info                      6.195    8.780    8.780    0.903  ????????????????????????????????
[2022-02-10T20:47:12.228Z] failovers_vb0             7.047   33.661   33.661    6.066  ????????????????????????????????
[2022-02-10T20:47:12.228Z] scheduler               583.954  893.768  893.768   78.221  ????????????????????????????????
[2022-02-10T20:47:12.228Z] runtimes                582.253  628.032  628.032   17.997  ????????????????????????????????
[2022-02-10T20:47:12.228Z] dcp                      84.269  133.582  133.582   18.318  ????????????????????????????????
[2022-02-10T20:47:12.228Z] uuid                      4.770    8.221    8.221    1.210  ????????????????????????????????
[2022-02-10T20:47:12.228Z] vb-seqno_vb0              8.247   21.000   21.000    3.399  ????????????????????????????????
[2022-02-10T20:47:12.228Z] dcp-vbtakeover            6.381   15.954   15.954    2.792  ????????????????????????????????
[2022-02-10T20:47:12.229Z] checkpoint_vb0           14.449   29.017   29.017    4.230  ????????????????????????????????
[2022-02-10T20:47:12.229Z] key_vb0                   8.749   16.086   16.086    2.328  ????????????????????????????????
[2022-02-10T20:47:12.229Z] config                  218.230  303.020  303.020   25.830  ????????????????????????????????
[2022-02-10T20:47:12.229Z] kvstore                  37.564  106.710  106.710   17.156  ????????????????????????????????
[2022-02-10T20:47:12.229Z] warmup                    8.451   19.011   19.011    2.808  ????????????????????????????????
[2022-02-10T20:47:12.229Z]                                                             3              �s            893
[2022-02-10T20:47:12.229Z] 
[2022-02-10T20:47:12.229Z] 
[2022-02-10T20:47:12.229Z] 
[2022-02-10T20:47:12.229Z] 92% tests passed, 35 tests failed out of 441
[2022-02-10T20:47:12.229Z] 
[2022-02-10T20:47:12.229Z] Total Test time (real) = 2045.35 sec
[2022-02-10T20:47:12.229Z] 
[2022-02-10T20:47:12.229Z] The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17547/ )

Timeout of a CTest test [2022-02-10T20:26:57.169Z] 113/441 Test #198: ep-engine_ep_unit_tests.PersistentAndEphemeral/ConnectionTest ...............................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17547/ )

Test exceeded the timeout:
[2022-02-10T20:17:04.856Z] Running [0007/0093]: test dcp noop.../usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17547/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17547/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25647/ : ABORTED

Test exceeded the timeout:
[2022-02-10T20:32:28.604Z] Running [0000/0093]: test dcp vbtakeover stat no stream.../usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25647/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25647/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18281/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18281/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15505/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15505/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15505/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43810/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0003/0005]: test checkpoint timeout...(39 ms) OK


97% tests passed, 13 tests failed out of 421

Total Test time (real) = 789.32 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43810/ )

Timeout of a CTest test 279/421 Test #178: ep-engine_ep_unit_tests.PersistentAndEphemeral/StreamTest .....................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43810/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16322/ : FAILURE

Timeout of a CTest test [2022-02-10T20:21:43.682Z]   6/441 Test #298: ep_testsuite_dcp.value_eviction.comp_active .................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16322/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5214/ : FAILURE

Test exceeded the timeout:
[2022-02-10T20:33:49.492Z] Running [0019/0047]: add+add(same cas).../usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5214/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14347/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36941/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5153/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
